# RHash

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  INSTALL.md  Makefile  Makefile.am  NEWS  README  README.md  calc_sums.c  calc_sums.h  common_func.c  common_func.h  configure  configure.ac  crc_print.c  crc_print.h  crc_update.c  crc_update.h  file.c  file.h  file_mask.c  file_mask.h  file_set.c  file_set.h  find_file.c  find_file.h  hash_check.c  hash_check.h  hash_print.c  hash_print.h  hash_update.c  hash_update.h  output.c  output.h  parse_cmdline.c  parse_cmdline.h  (+10 more)
.github/: FUNDING.yml
.github/workflows/: run_test.yml
bindings/: COPYING  ChangeLog  Makefile  version.properties
bindings/java/: .gitignore  Makefile
bindings/java/native/: HashObject.c  HashObject.h  Makefile  bindings.c  bindings.h  digest.c  digest.h
bindings/java/src/org/sf/rhash/: Bindings.java  Digest.java  Hash.java  HashType.java  Pointer.java  RHash.java  package-info.java
bindings/java/test/: RHashTest.java  Test.java
bindings/mono/: .gitignore  AssemblyInfo.cs  Bindings.cs  Bindings.cs.in  HashType.cs  Hasher.cs  Makefile  RHash.cs  RHash.csproj  RHash.dll.config  RHash.sln  RHash.snk  RHashPtr.cs
bindings/mono/doc/: index.xml  ns-RHash.xml
bindings/mono/doc/RHash/: HashType.xml  Hasher.xml
bindings/mono/test/: 12345.txt  Makefile  Test.cs
bindings/perl/: .gitignore  MANIFEST  META.json  META.yml  Makefile.PL  README  Rhash.pm  Rhash.xs  typemap
bindings/perl/t/: 1test_hash_calculation.t  2test_static_functions.t  3test_all_hash_functions.t
bindings/php/: config.m4  php_compatibility.h  php_rhash.c  php_rhash.h
bindings/php/tests/: 001.phpt  002.phpt  003.phpt
bindings/python/: .gitignore  LICENSE  README.md  rhash.py  setup.cfg  test_rhash.py
bindings/python/rhash/: __init__.py  rhash.py
bindings/python/tests/: rhash_test.py
bindings/ruby/: .gitignore  extconf.rb  rhash.c  test_rhash.rb
docs/: CONTRIBUTING.md  LIBRHASH.md
librhash/: CMakeLists.txt  Doxyfile  Makefile  Makefile.am  aich.c  aich.h  algorithms.c  algorithms.h  blake2b.c  blake2s.c  blake2s.h  blake3.c  blake3.h  byte_order.c  byte_order.h  config.h  crc32.c  crc32.h  ed2k.c  ed2k.h  edonr.c  edonr.h  gost.c  gost.h  gost12.c  gost12.h  gost94.c  gost94.h  has160.c  has160.h  hex.c  hex.h  md4.c  md4.h  md5.c  md5.h  plug_openssl.c  plug_openssl.h  rhash.c  rhash.h  (+41 more)
po/: ca.po  de.po  en_AU.po  es.po  fr.po  gl.po  it.po  pt_BR.po  rhash.pot  ro.po  ru.po  uk.po
tests/: Makefile.am  test512K.data  test_rhash.sh
win32/vc-2010/: rhash.vcxproj
