[metadata]
name = rhash-Rhash
version = 0.9
author = Aleksey Kravchenko
author_email = rhash.admin@gmail.com
description = Python interface for librhash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhash/RHash
project_urls =
    Bug Tracker = https://github.com/rhash/RHash/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent

[options]
packages = rhash
python_requires = >=3.4
