[metadata]
name = rhash-Rhash
version = 1.0
author = Aleksey Kravchenko
author_email = rhash.admin@gmail.com
description = Python interface for librhash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhash/RHash
project_urls =
    Source = https://github.com/rhash/RHash
    Bug Tracker = https://github.com/rhash/RHash/issues
license = BSD Zero Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = rhash
python_requires = >=3.4
