[metadata]
name = rhash-Rhash
version = 1.3
author = Aleksey Kravchenko
author_email = rhash.admin@gmail.com
description = Python interface for librhash
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rhash/RHash
project_urls =
    Source = https://github.com/rhash/RHash
    Bug Tracker = https://github.com/rhash/RHash/issues
    Documentation = https://github.com/rhash/RHash/tree/master/bindings/python#readme
license = 0BSD
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = rhash
python_requires = >=3.4
